logs/hackintosh.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/hackintosh'...
Compiling './lib/python3.5/site-packages/hackintosh/__init__.py'...
***   File "./lib/python3.5/site-packages/hackintosh/__init__.py", line 35
    mod = __import__(f'hackintosh.commands.{name}_cmd', None, None, ['cli'])
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hackintosh/commands'...
Compiling './lib/python3.5/site-packages/hackintosh/commands/hda_cmd.py'...
***   File "./lib/python3.5/site-packages/hackintosh/commands/hda_cmd.py", line 22
    url = f'http://sourceforge.net/projects/voodoohda/files/{filename}/download'
                                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hackintosh/commands/impl'...
Compiling './lib/python3.5/site-packages/hackintosh/commands/impl/acpi_impl.py'...
***   File "./lib/python3.5/site-packages/hackintosh/commands/impl/acpi_impl.py", line 18
    patch = f'{ctx.repo_path}/patches/{p}.txt'
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hackintosh/commands/impl/tool_impl.py'...
***   File "./lib/python3.5/site-packages/hackintosh/commands/impl/tool_impl.py", line 21
    error(f'lost zip file at {file}')
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hackintosh/commands/kext_cmd.py'...
***   File "./lib/python3.5/site-packages/hackintosh/commands/kext_cmd.py", line 33
    info(f'{k} downloaded')
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hackintosh/commands/set_cmd.py'...
***   File "./lib/python3.5/site-packages/hackintosh/commands/set_cmd.py", line 28
    info(f'Your current laptop series is {value}')
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hackintosh/commands/tool_cmd.py'...
***   File "./lib/python3.5/site-packages/hackintosh/commands/tool_cmd.py", line 14
    module = importlib.import_module(f'hackintosh.commands.tool_impl')
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hackintosh-0.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
